--- a/BLEFirstPraticeFor4310/Base.lproj/Main.storyboard
+++ b/BLEFirstPraticeFor4310/Base.lproj/Main.storyboard
@@ -48,7 +48,7 @@
                                     <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" misplaced="YES" reuseIdentifier="cell" translatesAutoresizingMaskIntoConstraints="NO" id="gtr-Ge-4Wn">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" translatesAutoresizingMaskIntoConstraints="NO" id="gtr-Ge-4Wn">
                                         <rect key="frame" x="10" y="10" width="172" height="200"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="NHw-s8-BlX">
@@ -78,8 +78,8 @@
                                                         <constraint firstAttribute="height" constant="74" id="keL-os-PWP"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" tag="6" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bHe-Sz-Wqw" userLabel="ID_Textview">
-                                                    <rect key="frame" x="123" y="8" width="41.5" height="21.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="6" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bHe-Sz-Wqw" userLabel="ID_Textview">
+                                                    <rect key="frame" x="123" y="10" width="41.5" height="21.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="41.5" id="eMk-dg-QTQ"/>
                                                         <constraint firstAttribute="width" secondItem="bHe-Sz-Wqw" secondAttribute="height" multiplier="41:21" id="f1r-6d-8Cr"/>
@@ -88,13 +88,8 @@
                                                     <color key="textColor" red="0.1669732045" green="0.80835087439999997" blue="0.44550656179999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" tag="5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0ep-GU-QQq" userLabel="Name_Textview">
-                                                    <rect key="frame" x="65" y="83" width="42" height="21"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="21" id="0AW-co-tMP"/>
-                                                        <constraint firstAttribute="width" constant="42" id="Scn-tj-1us"/>
-                                                        <constraint firstAttribute="width" secondItem="0ep-GU-QQq" secondAttribute="height" multiplier="2:1" id="XLd-0E-Rjq"/>
-                                                    </constraints>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0ep-GU-QQq" userLabel="Name_Textview">
+                                                    <rect key="frame" x="0.0" y="83" width="172" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -123,7 +118,7 @@
                                                         <constraint firstAttribute="width" constant="213" id="nWW-S4-Kh9"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movement" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AHA-q5-l33" userLabel="Movement_Title">
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="12" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movement" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AHA-q5-l33" userLabel="Movement_Title">
                                                     <rect key="frame" x="14" y="112" width="81" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="81" id="9AH-zb-bxc"/>
@@ -134,13 +129,13 @@
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Temperature" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s6H-7i-qID" userLabel="Temperature_Title">
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="13" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Temperature" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s6H-7i-qID" userLabel="Temperature_Title">
                                                     <rect key="frame" x="14" y="140" width="76" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Battery" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WAo-Bw-xIq" userLabel="Battery_Title">
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="14" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Battery" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WAo-Bw-xIq" userLabel="Battery_Title">
                                                     <rect key="frame" x="14" y="168" width="45" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -183,7 +178,7 @@
                                                 <constraint firstAttribute="trailing" secondItem="yBR-jF-zVu" secondAttribute="trailing" constant="-20.5" id="FJo-un-ZuM"/>
                                                 <constraint firstItem="Ex3-E0-GGZ" firstAttribute="top" secondItem="NHw-s8-BlX" secondAttribute="top" constant="6" id="Hvi-Ao-iOm"/>
                                                 <constraint firstItem="yBR-jF-zVu" firstAttribute="leading" secondItem="NHw-s8-BlX" secondAttribute="leading" constant="-20.5" id="LYE-kF-t8R"/>
-                                                <constraint firstItem="0ep-GU-QQq" firstAttribute="leading" secondItem="NHw-s8-BlX" secondAttribute="leading" constant="65" id="MDj-0h-VnP"/>
+                                                <constraint firstItem="0ep-GU-QQq" firstAttribute="leading" secondItem="NHw-s8-BlX" secondAttribute="leading" id="MDj-0h-VnP"/>
                                                 <constraint firstItem="XnY-C1-neU" firstAttribute="leading" secondItem="NHw-s8-BlX" secondAttribute="leading" id="MXn-Ls-DYA"/>
                                                 <constraint firstItem="DyB-uS-axb" firstAttribute="leading" secondItem="AHA-q5-l33" secondAttribute="trailing" constant="3" id="OR6-ml-kT3"/>
                                                 <constraint firstItem="0ep-GU-QQq" firstAttribute="top" secondItem="WdV-3q-WSb" secondAttribute="bottom" constant="3" id="PLL-5V-0kj"/>
@@ -202,7 +197,7 @@
                                                 <constraint firstItem="0Vy-QC-6YH" firstAttribute="top" secondItem="NHw-s8-BlX" secondAttribute="top" constant="166" id="eOZ-yU-Iba"/>
                                                 <constraint firstItem="6f4-6P-Rlc" firstAttribute="top" secondItem="s6H-7i-qID" secondAttribute="bottom" constant="5" id="fRP-7o-opm"/>
                                                 <constraint firstAttribute="trailing" secondItem="bHe-Sz-Wqw" secondAttribute="trailing" constant="7.5" id="fZz-L2-EA8"/>
-                                                <constraint firstAttribute="trailing" secondItem="0ep-GU-QQq" secondAttribute="trailing" constant="65" id="g2Z-4d-0T4"/>
+                                                <constraint firstAttribute="trailing" secondItem="0ep-GU-QQq" secondAttribute="trailing" id="g2Z-4d-0T4"/>
                                                 <constraint firstItem="yBR-jF-zVu" firstAttribute="top" secondItem="DyB-uS-axb" secondAttribute="bottom" constant="5" id="gV4-c9-Lko"/>
                                                 <constraint firstItem="0Vy-QC-6YH" firstAttribute="leading" secondItem="WAo-Bw-xIq" secondAttribute="trailing" constant="51" id="iLn-qQ-PSd"/>
                                                 <constraint firstItem="XnY-C1-neU" firstAttribute="top" secondItem="NHw-s8-BlX" secondAttribute="top" id="iUn-l7-kQt"/>
