--- a/BLEFirstPraticeFor4310/Base.lproj/Main.storyboard
+++ b/BLEFirstPraticeFor4310/Base.lproj/Main.storyboard
@@ -31,6 +31,16 @@
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RmN-tx-r5f" userLabel="View_2">
                                 <rect key="frame" x="0.0" y="65" width="375" height="80"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s4C-XA-4rC" userLabel="Bool_Order">
+                                        <rect key="frame" x="295" y="0.0" width="80" height="80"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" image="Change_Icon.png"/>
+                                        <connections>
+                                            <action selector="Touch_Bool_Order:" destination="BYZ-38-t0r" eventType="touchDown" id="67u-Vw-g0N"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="GoO-aa-rkW"/>
@@ -55,7 +65,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="172" height="200"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="baby_card_background.png" translatesAutoresizingMaskIntoConstraints="NO" id="XnY-C1-neU">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="15" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="baby_card_background.png" translatesAutoresizingMaskIntoConstraints="NO" id="XnY-C1-neU">
                                                     <rect key="frame" x="0.0" y="0.0" width="172" height="200"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
@@ -265,6 +275,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="Bool_Order_Button" destination="s4C-XA-4rC" id="waU-D6-Spa"/>
                         <outlet property="myCollectionView" destination="HsB-EV-W82" id="N3x-wD-AZM"/>
                     </connections>
                 </viewController>
@@ -274,6 +285,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Change_Icon.png" width="409.60000610351562" height="409.60000610351562"/>
         <image name="baby_card_background.png" width="221.75999450683594" height="249.1199951171875"/>
         <image name="background.png" width="480" height="800"/>
         <systemColor name="systemBackgroundColor">
